Groups now are identified by a groupId.
